@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-dicts/myspell-cs/myspell-cs-20060316.ebuild,v 1.15 2009/10/18 22:16:20 halcy0n Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-dicts/myspell-cs/myspell-cs-20060316.ebuild,v 1.16 2010/01/16 14:15:37 ulm Exp $
 
 MYSPELL_SPELLING_DICTIONARIES=(
 "cs,CZ,cs_CZ,Czech (Czech Republic),cs_CZ.zip"
@@ -17,7 +17,7 @@ MYSPELL_THESAURUS_DICTIONARIES=(
 inherit myspell
 
 DESCRIPTION="Czech dictionaries for myspell/hunspell"
-LICENSE="GPL-2 myspell-th_cs_CZ-PavelRychlySmrz"
+LICENSE="GPL-2 MIT"
 HOMEPAGE="http://lingucomponent.openoffice.org/"
 
 KEYWORDS="~alpha amd64 ~arm hppa ~ia64 ppc ~ppc64 ~sh sparc x86 ~x86-fbsd"
